--- a/app/views/subscriptions/_grid_subscription.html.erb
+++ b/app/views/subscriptions/_grid_subscription.html.erb
@@ -1,20 +1,4 @@
-<% if policy(:subscription).charge? %>
-  <tr>
-    <td><%= subscription&.created_at.strftime('%F') %></td>
-    <td><%= subscription&.user.name %></td>
-    <td><%= link_to subscription&.plan&.name, subscription.plan %></td>
-    <td><%= subscription.billing_day %></td>
-    <td>
-      <%= link_to 'UnSubscribe', subscription, method: :delete, data: {confirm: 'Are you sure?'} %>
-      <% if charge_able?(subscription) %>
-        |
-        <%= link_to 'Charge', subscription_charge_path(subscription), method: :post %>
-      <% end %>
-      |
-      <%= link_to 'Usages', subscription_usages_path(subscription), method: :get %>
-    </td>
-  </tr>
-<% else %>
+<% @subscriptions.each { |subscription| %>
   <div class="col-md-3">
     <div class="card mx-auto">
       <div class="card-body">
@@ -28,9 +12,13 @@
           </div>
         </div>
       </div>
+      <% if policy(:subscription).charge? && charge_able?(subscription) %>
+        <%= button_to 'Charge', subscription_charge_path(subscription), method: :post, class: 'btn btn-primary' %>
+        <hr>
+      <% end %>
       <%= button_to 'View Usages', subscription_usages_path(subscription), method: :get, class: 'btn btn-primary' %>
       <hr>
       <%= button_to 'Cancel Subscription', subscription, method: :delete, class: 'btn btn-danger', data: {confirm: 'Are you sure?'} %>
     </div>
   </div>
-<% end %>
+<% } %>
